--- a/src/Definux.Seo/Definux.Seo.csproj
+++ b/src/Definux.Seo/Definux.Seo.csproj
@@ -2,7 +2,32 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Company>Definux</Company>
+    <Product>Definux.Seo</Product>
+    <PackageProjectUrl>https://github.com/Definux/Seo</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Definux/Seo</RepositoryUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Description>SEO plugin for ASP.NET Core applications.</Description>
+    <Authors>Georgi Karagogov</Authors>
+    <Copyright>Definux</Copyright>
+    <PackageTags>SEO, Sitemap, robots</PackageTags>
+    <Version>$(PACKAGE_VERSION)</Version>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageIcon>logo_128.jpg</PackageIcon>
+    <PackageIconUrl />
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\art\logo_128.jpg">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
