--- a/src/Definux.Seo/Definux.Seo.csproj
+++ b/src/Definux.Seo/Definux.Seo.csproj
@@ -30,11 +30,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Definux.HtmlBuilder" Version="1.0.14" />
+    <PackageReference Include="Definux.Utilities.Extensions" Version="1.0.27" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
