Reconfigure automatic GitHub releases

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 version: 1.0.{build}
+skip_tags: true
 image: Visual Studio 2019
 assembly_info:
   patch: true
@@ -23,8 +24,9 @@ deploy:
   on:
     branch: master
 - provider: GitHub
-  tag: v{version}
-  release: '{version}'
+  tag: v$(appveyor_build_version)
+  release: $(appveyor_build_version)
+  description: $(APPVEYOR_REPO_COMMIT_MESSAGE)
   auth_token:
     secure: C6D3cCL0/G5S9hyReiIaq6FA/vKmtgB8UGVstzlSs20bEUJ8mHfdlo8Nu03Sgt70
   artifact: /.*\.nupkg/
